# simple-simulation

./: .dockerignore  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  closed-loop.py  install_hsl.sh  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
examples/: __init__.py  closed_loop.py  example_scenario0.json  example_scenario1.json  example_scenario2.json  generate_simulation_run_videos.py
mpc_controller/: __init__.py  advanced_mpc_controller.py  mpc_controller.py  vehicle_simulator.py
pilots/: __init__.py  dummy_pilot.py  highway_pilot.py  pilot.py
pilots/highway_pilot/: highway_pilot.py
simple_simulation/pilots/: __init__.py  driver_ctrl_pilot.py  highway_pilot.py  mpc_controller.py
simple_simulation/simulation_core/: commonroad_vehicle_model.py  configuration.py  simulation_core.py  termination_status.py  trajectory_vehicle_model.py  vehicle_dynamics_object.py
simple_simulation/simulation_manager/: __init__.py  multi_simulation_manager.py  single_simulation_manager.py
simulation_core/: __init__.py  commonroad_vehicle_model.py  simulation_core.py  situation_renderer.py  termination_status.py  trajectory_vehicle_model.py  vehicle_dynamics_object.py  vehicle_state.py
simulation_manager/: __init__.py  combined_test_report.py  multi_simulation_manager.py  single_simulation_evaluator.py  single_simulation_manager.py
test/: check_test_result_format.py  evaluate_expected_termination_reason.py  test_ba_neunzig.py  test_challenger_a.py  test_multi_simulation_manager.py  test_single_simulation_manager.py
test/test_data/: ZAM_ValidationScenario+No+00001-0_0_T-0.xml  test.json
test/test_data/ba_neunzig/cutin/: cutin1.json  cutin2.json  cutin3.json
test/test_data/ba_neunzig/deceleration/: deceleration1.json  deceleration2.json  deceleration3.json  deceleration4.json  deceleration5.json  deceleration6.json  deceleration7.json  deceleration8.json  deceleration9.json
test/test_data/challenger_a/: a0.json  a1.json  a2.json  a3.json  a4.json  a5.json  standstill.json
test/test_data/limits/: a0.json  a1.json  a2.json  a3.json  a4.json  a5.json  cutin1.json  cutin2.json  cutin3.json  deceleration1.json  deceleration2.json  deceleration3.json  deceleration4.json  deceleration5.json  deceleration6.json  deceleration7.json  deceleration8.json  deceleration9.json  emergency_operation.json  normal_operation.json  physical_limits.json
test/test_data/simulation_config/: highway.json  simulation_config.json
