[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-simulation"
authors = [
    {name = "Lennart Vater", email = "lennart.vater@ika.rwth-aachen.de"}
]
maintainers = [
    {name = "Lennart Vater", email = "lennart.vater@ika.rwth-aachen.de"}
]
description = "Execute simulation runs defined by simple-scenario for testing prototype automated driving systems and developing test scenario selection algorithms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
version = "0.1.0"
dependencies = [
    "asyncua==1.0.3",
    "commonroad-drivability-checker==2022.1",
    "commonroad-io==2022.1",
    "commonroad-vehicle-models==3.0.2",
    "do-mpc==4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "onnx==1.14.0",
    "opencv-python>=4.11.0.86",
    "orjson>=3.10.15",
    "reportlab==4.2.0",
    "shapely==1.8.5.post1",
    "simple-scenario>=0.10.1",
    "tqdm>=4.67.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.13.0",
]
build = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[tool.setuptools]
packages = [
    "mpc_controller",
    "pilots",
    "pilots.highway_pilot",
    "simulation_core",
    "simulation_manager",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "test",
]

[tool.ruff]
output-format="concise"

[tool.ruff.lint]
select = [
    "AIR001",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C",
    "DTZ",
    "T",
    "DJ",
    "EM",
    "ERA001",
    "EXE",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "NPY",
    "N",
    "PD",
    "PERF",
    "E",
    "W",
    "F",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "UP",
    "FURB",
    "RUF",
    "TRY",
    "TD",
]
ignore = [
    "ANN002",
    "ANN003",
    "PLR2004",
    "PLR0913",
    "PLR0915",
    "E501",
    "B019",
    "D",
    "I001",
    "FBT",
    "RET504",
    "C901",
    "SIM108",
    "FIX",  # Fixes
    "TRY002",
    "TRY003",
    "Q003",
    "COM812",
    "SIM103",
    "TID252",
    "RUF012",
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test/*.py" = ["F841", "S101", "T201", "ANN"]
"pilots/highway_pilot/highway_pilot.py" = ["N806"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]
